--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sjonify">
-        <activity android:name=".menuPrincipal">
+
+        <activity android:name=".MainActivityDialogFragment"></activity>
+        <activity android:name=".WebViewPage">
+
+        </activity>
+        <activity android:name=".videoView">
+
+        </activity>
+        <activity android:name=".MyRecyclerView">
+
+        </activity>
+        <activity android:name=".principal">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivityDialogFragment"></activity>
-        <activity android:name=".WebViewPage">
-        </activity>
-        <activity android:name=".videoView"></activity>
-        <activity android:name=".MyRecyclerView"></activity>
-        <activity android:name=".principal"></activity>
         <activity android:name=".MainActivity"></activity>
     </application>
 
